--- a/css/main.css
+++ b/css/main.css
@@ -856,6 +856,15 @@ a.link-title {
     margin-bottom: 10px;
 }
 
+.post-comment .comment-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
 /*#post-image-container .post-image-tile .close-button {
     display: none;
 }*/
