--- a/css/main.css
+++ b/css/main.css
@@ -960,10 +960,6 @@ a.link-title {
     padding: 0;
 }
 
-#post-content {
-    border-bottom: 1px solid #ccc;
-}
-
 .italic {
     font-style: italic;
 }
@@ -977,7 +973,11 @@ a.link-title {
     box-shadow: #ccc 1px 1px 3px;
 }
 
-.post-comment > div:first-child {
+.post-activity-section.original-content {
+    
+}
+
+.post-activity-section > div:first-child {
     padding: 6px;
 }
 
