--- a/css/main.css
+++ b/css/main.css
@@ -583,6 +583,7 @@ a:visited {
     box-shadow: #ccc 1px 1px 4px;
 /*    border: 1px solid #e5e6e9;*/
     border-radius: 5px;
+    background-color: white;
 }
 
 /*http://jsfiddle.net/E78q3/*/
