--- a/css/main.css
+++ b/css/main.css
@@ -344,7 +344,7 @@ a:visited {
 }
 
 .block.hover {
-    background-color: #ccc;
+    background-color: #f6f6f6;
     color: #444;
 }
 
@@ -582,7 +582,7 @@ a:visited {
 .block {
     box-shadow: #ccc 1px 1px 4px;
 /*    border: 1px solid #e5e6e9;*/
-    border-radius: 5px;
+    border-radius: 2px;
     background-color: white;
 }
 
@@ -1029,7 +1029,7 @@ a.link-title {
 
 .ui-widget {
     background-color: #f1f1f1;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 .menu {
