--- a/css/main.css
+++ b/css/main.css
@@ -990,8 +990,11 @@ a.link-title {
 }
 
 .post-activity-section > .activity-text {
-    margin-top: 8px;
     font-size: 0.95em;
+}
+
+.post-activity-section > * {
+    margin-top: 8px;
 }
 
 #overlay, #message-overlay {
