--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,7 @@ a:visited {
     margin: 5px;
     padding: 4px !important;
     position: relative;
+    display: inline-block;
 /*    border-radius: 5px;
     box-shadow: #ccc 1px 1px 4px;
     background-color: #f1f1f1;*/
