--- a/css/main.css
+++ b/css/main.css
@@ -310,7 +310,7 @@ a:visited {
 }
 
 #details-right-column {
-    left: 395px;
+    left: 392px;
     padding-right: 8px;
     overflow: hidden;
 }
@@ -798,8 +798,7 @@ a.link-title {
     display: inline-block;
     min-width: 181px;
     min-height: 181px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .post-comment .post-comment-image {
