--- a/css/main.css
+++ b/css/main.css
@@ -888,13 +888,20 @@ a.link-title {
     background-color: white;
 }
 
-#post-no-image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-image: url("/img/no-image.png");
-    background-size: contain;
-    height: 350px;
+#post-no-image-desc {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
 
+#post-no-image-desc .hint {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 3em;
 }
 
 #post-details-user-data {
