--- a/css/main.css
+++ b/css/main.css
@@ -821,8 +821,12 @@ a.link-title {
     background-size: cover;
     cursor: pointer;
     display: inline-block;
-    margin: 10px;
+    margin-left: 10px;
     border: 1px solid #dddddd;
+}
+
+#post-image-container .post-image-tile:last-child {
+    margin-right: 10px;
 }
 
 .post-comment .post-comment-image {
