--- a/css/main.css
+++ b/css/main.css
@@ -744,6 +744,7 @@ a:visited {
 .post-block .link-title, .post-block .user-name {
     font-weight: bold;
     display: block;
+    max-width: 230px;
 }
 
 .post-block .link-title {
