--- a/css/main.css
+++ b/css/main.css
@@ -835,9 +835,11 @@ a.link-title {
     background-repeat: no-repeat;
     background-size: contain;
     cursor: pointer;
-    margin: 10px;
+    padding: 10px;
+    margin-top: 10px;
     height: 200px;
-    width: 315px;
+    width: 295px;
+    border: 1px solid #ccc;
 }
 
 #post-image-container .post-image-tile.right {
