--- a/css/main.css
+++ b/css/main.css
@@ -337,7 +337,7 @@ a:visited {
 .selection-list {
     list-style: none;
     padding: 0;
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 0;
     margin-right: -5px;
 }
