--- a/css/main.css
+++ b/css/main.css
@@ -539,7 +539,7 @@ a:visited {
 }
 
 .toolbar-button .button-icon.icon-facebook {
-    background-image: url('/img/facebook.png');
+    background-image: url('/icons/users32.png');
 }
 
 .toolbar-button .button-icon.icon-refresh {
@@ -572,6 +572,10 @@ a:visited {
 
 .toolbar-button:hover .button-icon.icon-new {
     background-image: url('/icons/paperplus32w.png');
+}
+
+.toolbar-button:hover .button-icon.icon-facebook {
+    background-image: url('/icons/users32w.png');
 }
 
 .toolbar-button:hover .button-icon.icon-refresh {
