--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,15 @@ a {
     font-weight: bold;
 }
 
+/* Automatically wrap long links. */
+a {
+    white-space: pre-wrap; /* css-3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 a:hover {
     text-decoration: underline;
 }
