--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,10 @@ a:visited {
     text-align: right;
 }
 
+.comment-control :not(:last-child) {
+    margin-right: 3px;
+}
+
 .transparent {
     background: transparent;
 }
