--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,12 @@ a:visited {
     background-repeat: no-repeat;
 }
 
+.divider {
+    margin-left: 5px;
+    margin-right: 5px;
+    background-image: url('/img/divider.png');
+}
+
 .close-button:hover {
     background-image: url('/img/panel-close-hover.png');
     cursor: pointer;
