--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,9 @@ a:visited {
 .divider {
     margin-left: 5px;
     margin-right: 5px;
+    height: 8px;
+    width: 8px;
+    display: inline-block;
     background-image: url('/img/divider.png');
 }
 
@@ -351,9 +354,9 @@ a:visited {
     text-align: right;
 }
 
-.comment-control :not(:last-child) {
+/*.comment-control :not(:last-child) {
     margin-right: 5px;
-}
+}*/
 
 .transparent {
     background: transparent;
