--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,8 @@ textarea {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     height: 8em;
+    font-family: monospace;
+    font-size: 13px;
 }
 
 input[type=text] {
