--- a/css/main.css
+++ b/css/main.css
@@ -457,9 +457,8 @@ a:visited {
 }
 
 .post-block.ad-div {
-    background-color: #c0c0c0;
+    background-color: #f6f6f6;
     color: #e35765;
-    font-weight: bold;
 }
 
 #bottom-ad-banner {
