--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,20 @@ a:visited {
     color: white;
 }
 
+.centered {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#select-group-no-groups {
+    height: 1.1em;
+    width: 700px;
+}
+
 /*.post-comment-header .timestamp,#post-message-header .timestamp {
     display: block;
     font-weight: normal;
