--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ html {
 body {
     overflow: hidden;
     background-color: #f1f1f1;
-/*    background: url(/img/textured_paper.png);*/
+    /*    background: url(/img/textured_paper.png);*/
 }
 
 /*
@@ -194,7 +194,7 @@ a:visited {
     color: white;
 }
 
-#select-group-no-groups {
+.text-centered {
     text-align: center;
 }
 
@@ -220,16 +220,21 @@ a:visited {
     font-weight: bold;
 }
 
-#main-search {
+.search-box {
     height: 1.5em;
     padding: 6px 10px 6px 10px;
     width: 138px;
     resize: none;
 }
 
-#main-panel {
-    right: 0;
+.full-width {
     left: 0;
+    right: 0;
+}
+
+.full-height {
+    top: 0;
+    bottom: 0;
 }
 
 .floating-panel {
@@ -243,9 +248,9 @@ a:visited {
     z-index: 1000;
 }
 
-#select-group-panel {
+/*#select-group-panel {
     width: 1030px;
-}
+}*/
 
 .close-button {
     height: 20px;
@@ -313,7 +318,7 @@ a:visited {
     margin-right: 120px;
 }
 
-#details-left-column {
+/*#details-left-column {
     width: 350px;
     padding-right: 8px;
 }
@@ -322,7 +327,7 @@ a:visited {
     left: 392px;
     padding-right: 8px;
     overflow: hidden;
-}
+}*/
 
 .ajax-loading-div {
     background: white;
@@ -359,8 +364,8 @@ a:visited {
 }
 
 .block.hover {
-/*    background-color: #f6f6f6;
-    color: #444;*/
+    /*    background-color: #f6f6f6;
+        color: #444;*/
     background-color: #4395D1;
     color: white;
     cursor: pointer;
@@ -492,7 +497,7 @@ a:visited {
     line-height: 42px;
     border-radius: 0;
     font-size: 1.1em;
-/*    color: #f6f6f6;*/
+    /*    color: #f6f6f6;*/
 }
 
 .button.menu-button {
@@ -857,12 +862,17 @@ a.link-title {
     right: 25px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    left: 392px;
+    padding-right: 8px;
+    overflow: hidden;
 }
 
 .floating-panel-content .column.left {
     left: 25px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    width: 350px;
+    padding-right: 8px;
 }
 
 .floating-panel-content.narrow {
@@ -1084,8 +1094,8 @@ div.right-toolbar-button {
     position: fixed;
     width: 100%;
     z-index: 100;
-/*    background-color: #105cb6;
-    box-shadow: #ccc 1px 1px 4px;*/
+    /*    background-color: #105cb6;
+        box-shadow: #ccc 1px 1px 4px;*/
 }
 
 .toolbar.floating-panel-toolbar {
