--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,7 @@ a:visited {
 }
 
 .selection-item {
-    margin: 5px;
+    margin: 3px;
     padding: 4px !important;
     position: relative;
     display: inline-block;
@@ -601,16 +601,13 @@ a:visited {
 
 /*http://jsfiddle.net/E78q3/*/
 
-.post-block,
-.post-block.post-block-text,
-.post-block.post-block-link,
-.post-block.post-block-textlink {
+.post-block {
     display: inline-block;
     height: 250px;
     width: 300px;
     overflow: hidden;
-    margin: 8px;
-    margin-bottom: 4px;
+    margin: 3px;
+    margin-bottom: -1px;
     cursor: pointer;
     position: relative;
 }
@@ -1001,8 +998,8 @@ a.link-title {
 }
 
 .main-feed {
-    margin-left: 195px;
-    margin-top: 52px;
+    margin-left: 200px;
+    margin-top: 57px;
     position: relative;
     padding-bottom: 25px;
     min-height: 1500px;
